--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "Scholar Renamer",
-  "version": "0.1",
+  "name": "Scholar Tab Renamer",
+  "description": "It's \"Circuits\", not \"ECE_2004_12403_201501\"!",
+  "version": "1.0.1",
   "background": {
     "scripts": ["background.js"],
     "persistent": false
